--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ header {
     border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 20px;
+    text-decoration: none;
 }
 
 .unicornio {
