--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     margin: 0px
 }
 
-header {
-  margin-top: 5px;
+nav a {
+   margin-top: 5px;
     padding: 2px;
     font-size: 20px;
     text-decoration: none;
