--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@ body {
     margin: 0px
 }
 
-nav a {
+header {
    margin-top: 5px;
     padding: 2px;
     font-size: 20px;
     text-decoration: none;
-    color:rgba(204, 168, 238, 0.192)
+    color:rgba(204, 168, 238, 0.192);
+    display: flex;
+    justify-content: center;
 }
 h1 {
     color: darkturquoise;
